VERSION 0.7.2 (r???)
	* Old (and buggy) build system removed in favor of CMake.
	* Fixed a few memory leaks in CPUID.
	* Added support for DEC Alpha and Sun SPARC.
	* Documentation is now more verbose and has been clarified in some areas.
	* Added an optional preprocessor definition "DISABLE_DEPRECATED_CODE" to disable MD2, slow sorts, etc.
	* CPUID test application now reports any oddities (such as: the processor is multicore but only 1 virtual processor was detected).
	* Added 'flushArray' and 'flush' to DArray to allow for simpler deletion of contained data.
	* Stopwatch::Clocks() removed because it was too platform-specific and only Windows seemed to have decent support.
	* HashTable is now usable and is no longer considered experimental.
	* A major AVLTree::findRecursive() bug (in which the result might not actually be found) has been corrected.
	* A major RedBlackTree::findRecursive() bug (in which the result might not actually be found) has been corrected.
	* A major SplayTree::findRecursive() bug (in which the result might not actually be found) has been corrected.
	* Test suite is now a bit more zealous about checking everything.

VERSION 0.7.1 (r768)
	* Added Objective-C support via the NSApplicationMain entry point. Define COCOA_APPLICATION in universal_include.h to use.
	* In-progress connections now report EINPROGRESS instead of EWOULDBLOCK.
	* TCPSockets generally overhauled after lots of practical use of them in ARC++.
	* FG_YELLOW now exists as an alias of FG_BROWN | FG_INTENSITY.
	* GenerateBuildNumber.exe is now statically linked.
	* Stopwatch now calls Start() on initialization (largely for cases such as static instantiations of the class).
	* Removed an extra semicolon which caused compiler errors on newer versions of GCC.
	* Removed the largely unimplemented "ban" system in sockets.
	* Renamed the internal strdup macro to cc_strdup to avoid conflicts.
	* Fixed a critical bug in RedBlackTree where a null pointer is dereferenced.